ModelItem: Auf viewport umgestellt
git-svn-id: file:///home/nik/repositories/svn/master@700 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
@@ -7,8 +7,8 @@ Die in der Implementierung angewandte Pragmatik verbietet das Löschen von Model
 abhängig sind. Der Entwurf ermöglicht es auch nachträglich dieses Vorgehen mit geringem Aufwand durch ein kaskadierendes Löschen zu 
 ersetzen. 
 
-\img[width=\relWidth{0.46}]{modelItem/modelItem.png}{Klasse ModelItem}{img_modelItem}
-
+%\img[width=\relWidth{0.46}]{modelItem/modelItem.png}{Klasse ModelItem}{img_modelItem}
+\img[width=\relWidth{0.5},viewport=1620 1476 1910 1600, clip]{klassendiagramm/Klassendiagramm.pdf}{Klasse ModelItem}{img_modelItem}
 
 \subsubsection{Operationen}
 
