Operation: reference korrigiert
git-svn-id: file:///home/nik/repositories/svn/master@701 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -8,7 +8,7 @@ Sowohl Operationen als auch Assoziationen haben genau ein Quell- und Zieltyp wob
 \subsubsection{Operationen}
 
 Die Klasse Operation repräsentiert die Abbildung von Operationen in dem erarbeiteten Modell.
-Wie in dem Modell aus Abbildung \ref{img_operation} ersichtlich, hat die Oberklasse AbstractOperation zwei  Assoziationen zu MType. 
+Wie im Modell (siehe \refImg{img_operation}) ersichtlich, hat die Oberklasse AbstractOperation zwei  Assoziationen zu MType. 
 Im Kontext von Operationen ist die Quelle (source) der Typ, welcher die Operation enthält. 
 Das Ziel (target) einer Operation entspricht dem Rückgabetypen.
 Neben Quell- und Zieltypen besitzt eine Operation eine Liste von Formalparametern, welche 
