--- a/public/doku/metaModel/trunk/framework/SpecialEffects.tex
+++ b/public/doku/metaModel/trunk/framework/SpecialEffects.tex
@@ -54,20 +54,20 @@
   \begingroup
     \edef\@alltocdepth{\the\value{tocdepth}} % tocdepth merken
     \setcounter{tocdepth}{-10000} % Keine Verzeichniseinträge
-    %\renewcommand*{\contentsname}{Anhangsverzeichnis} % Verzeichnisname ändern
-    %\renewcommand*{\appendixattoc}{ % Trennanweisung im Inhaltsverzeichnis
-    %  \setcounter{tocdepth}{\@alltocdepth} % tocdepth wiederherstellen
-    %}%
+    \renewcommand*{\contentsname}{Anhangsverzeichnis} % Verzeichnisname ändern
+    \renewcommand*{\appendixattoc}{ % Trennanweisung im Inhaltsverzeichnis
+      \setcounter{tocdepth}{\@alltocdepth} % tocdepth wiederherstellen
+    }%
     %\tableofcontents % Verzeichnis ausgeben
     \setcounter{tocdepth}{\@alltocdepth} % tocdepth wiederherstellen
   \endgroup
 }
 \newcommand*{\appendixattoc}{ % Trennanweisung im Inhaltsverzeichnis
 }
-%\g@addto@macro\appendix{ % \appendix erweitern
-  %\newpage % Neue Seite
- %\phantomsection % Sprungmarke korrigieren
-  %\addcontentsline{toc}{section}{\appendixname} % Eintrag ins Hauptverzeichnis
-  %\addtocontents{toc}{\protect\appendixattoc} % Trennanweisung in die toc-Datei
-%}
+\g@addto@macro\appendix{ % \appendix erweitern
+  \newpage % Neue Seite
+ \phantomsection % Sprungmarke korrigieren
+  \addcontentsline{toc}{section}{\appendixname} % Eintrag ins Hauptverzeichnis
+  \addtocontents{toc}{\protect\appendixattoc} % Trennanweisung in die toc-Datei
+}
 \makeatother
