--- a/public/doku/metaModel/trunk/framework/SpecialEffects.tex
+++ b/public/doku/metaModel/trunk/framework/SpecialEffects.tex
@@ -44,7 +44,7 @@
   \begingroup
     \@fileswfalse % Kein neues Verzeichnis öffnen
     \renewcommand*{\appendixattoc}{ % Trennanweisung im Inhaltsverzeichnis
-      \value{tocdepth}=-10000 % lokal tocdepth auf sehr kleinen Wert setzen
+      %\value{tocdepth}=-10000 % lokal tocdepth auf sehr kleinen Wert setzen
     }%
     \tableofcontents % Verzeichnis ausgeben
   \endgroup
