--- a/public/doku/metaModel/trunk/framework/SpecialEffects.tex
+++ b/public/doku/metaModel/trunk/framework/SpecialEffects.tex
@@ -41,13 +41,13 @@
 
 \makeatletter
 \newcommand*{\maintoc}{ % Hauptinhaltsverzeichnis
-  \begingroup
-    \@fileswfalse % Kein neues Verzeichnis öffnen
+  %\begingroup
+    %\@fileswfalse % Kein neues Verzeichnis öffnen
     %\renewcommand*{\appendixattoc}{ % Trennanweisung im Inhaltsverzeichnis
       %\value{tocdepth}=-10000 % lokal tocdepth auf sehr kleinen Wert setzen
     %}%
     \tableofcontents % Verzeichnis ausgeben
-  \endgroup
+  %\endgroup
 }
 
 \newcommand*{\appendixtoc}{ % Anhangsinhaltsverzeichnis
