--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -5,7 +5,7 @@ eine qualitative Messung. Im Kontext dieses Projekts wird diese Art von Messung 
 \ref{Observations}) bezeichnet. Unter quantitativen Messungen, bezeichnet als \term{Measurement}, wird
 beispielsweise das Feststellen der Körpergröße eines Menschen verstanden.
 
-\img[width=\relWidth{0.8},viewport=3588 390 4280 1170, clip]{klassendiagramm/Klassendiagramm.pdf}{Klassendiagramm - Ausschnitt Measurement}{img_measurement}
+\img[width=\relWidth{0.8},viewport=3588 390 4280 1170, clip]{klassendiagramm/Klassendiagramm.pdf}{Klassendiagramm - Ausschnitt Measurement (vereinfacht)}{img_measurement}
 
 \term{Measurements} (beispielsweise die \qq{Körpergröße von Hugo Egon Balder: 190cm}) werden in Form von Quantitäten bzw.
 \term{Quantities} auf Konten (\term{Accounts}) erfasst. Des Weiteren gibt es \term{MeasurementTypes} und
