--- a/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
@@ -6,9 +6,8 @@ das Löschen dieser zu vereinheitlichen. Der Abhängigkeitsgraph ist, durch die 
 Die in der Implementierung angewandte Pragmatik verbietet das Löschen von Modellelementen, von denen weitere Elemente 
 abhängig sind. Der Entwurf ermöglicht es auch nachträglich dieses Vorgehen mit geringem Aufwand durch ein kaskadierendes Löschen zu 
 ersetzen. 
-
-%\img[width=\relWidth{0.46}]{modelItem/modelItem.png}{Klasse ModelItem}{img_modelItem}
-\img[width=\relWidth{0.5},viewport=1620 1476 1910 1600, clip]{klassendiagramm/Klassendiagramm.pdf}{Klasse ModelItem}{img_modelItem}
+ 
+\img[width=\relWidth{0.5}]{modelItem/modelItem.pdf}{Klasse ModelItem}{img_modelItem}
 
 \subsubsection{Operationen}
 
