--- a/public/doku/metaModel/trunk/framework/Commands.tex
+++ b/public/doku/metaModel/trunk/framework/Commands.tex
@@ -56,7 +56,7 @@
 % Neuer Befehl: Gibt eine Referenz zu dem übergebenen Kapitel zurück
 % @in {}: Labelname des Kapitels
 % @in []: Beschriftung vor der Referenz
-\newcommand{\refSec}[2][Kapitel~]{#1\ref{sec:#2}}
+\newcommand{\refSec}[2][Abschnitt~]{#1\ref{sec:#2}}
 
 % Neuer Befehl: Gibt die Seite zurück, auf der sich das übergebene Kapitel befindet
 % @in {}: Labelname des Kapitels
